feat: readme updated, icons generated

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "wtf-webpack-starterkit",
+  "name": "FriendsQuoteGenerator",
   "version": "1.0.1",
-  "description": "WTF Webpack starterkit",
+  "description": "Generate random funny quotes from the timeless Friends TV show",
   "main": "index.js",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --mode development",
     "build": "webpack --config webpack.prod.js --mode production",
     "publish": "npm run build && gh-pages -d dist",
-    "generate-icons": "npx pwa-asset-generator ./src/assets/img/logo.svg public/pwa -i ./src/pages/index.html -m ./public/manifest.json  --path-override pwa --type png -b \"#2D2241\""
+    "generate-icons": "npx pwa-asset-generator ./src/assets/img/frame.png public/pwa -i ./src/pages/index.html -m ./public/manifest.json  --path-override pwa --type png -b \"#ECE1C0\""
   },
   "keywords": [
     "Webpack",
